Conexão realizada, metodos de criar tabela e jogador feitos, faltando apenas metodos de verificar a existencia de um jogador

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,6 @@
 # Aqui contém todas as Keys geradas, tal como suas datas de expiração e valor
+Mysql:
+  ip-andress: "localhost"
+  user: "root"
+  password: ""
 Keys:
